--- a/1.css
+++ b/1.css
@@ -112,7 +112,7 @@ footer i {
     margin-right: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) 
     .container {
         flex-direction: column; 
         width: 100%; 
