--- a/1.css
+++ b/1.css
@@ -77,28 +77,10 @@ main h3 {
     margin-bottom: 8px;
     color: #000000;
 }
-
-main .mye {
-    padding: 20px;
-    background-color: #f7efe2;
-    min-height: 180px; 
-    margin-bottom: 20px; 
-    overflow: auto;
-}
-
-.myeim{
-    display: flex;
-    justify-content: space-between; 
-    margin-top: 25px; 
-}
-
-.myeim img {
-    width: 300px; 
+.mye img{
+    width: 300px;
     height: 400px;
-    object-fit: cover;
-    border-radius: 8px;
 }
-
 footer {
     background-color:#ffd695;
     padding: 20px 40px;
@@ -114,45 +96,3 @@ footer span {
 footer i {
     margin-right: 10px;
 }
-
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column; 
-        width: 100%; 
-        margin: 0;
-        box-shadow: none; 
-    }
-
-    aside {
-        flex-basis: auto;  
-        border-right: none;  
-        border-bottom: 1px solid #e0e0e0; 
-    }
-
-    header,
-    main {
-        padding: 20px 25px;
-    }
-
-    header h1 {
-        font-size: 2em; 
-    }
-
-    footer {
-        flex-direction: column; 
-        align-items: flex-start; 
-        padding: 20px 25px;
-    }
-
-    footer span {
-        margin-bottom: 10px; 
-    }
-    .myeim{
-        flex-direction: column;
-        align-items: center;
-    }
-    .image-container img {
-        width: 90%; 
-        height: auto; 
-        margin-bottom: 15px; 
-    }
